agrego link para registro en el login

--- a/archivosHTML/login.html
+++ b/archivosHTML/login.html
@@ -40,6 +40,20 @@
       <input id="password" name="password" type="password" placeholder="CONTRASEÑA" required style="text-align:center;">
       
       <button class="btn" type="submit">Entrar</button>
+       <p
+          style="
+            text-align: center;
+            font-size: 0.9rem;
+            margin-top: 0.01px;
+            color: #333;
+          "
+        >
+          <a
+            href="../archivosPHP/Registro.php"
+            style="color: #6b5b4b; font-weight: bold"
+            >Crear una cuenta</a
+          >
+        </p>
     </form>
   </main>
   <footer class="footer">
